# snippets

./: .gitignore  .gitlab-ci.yml  .gitmodules  ABOUT  AUTHORS  COPYING  LICENSE  README.md  TODO.md  arduino  blender  index.html  jdhp_html_fr.tpl  remark.js
android/: .gitignore  README
arduino/: README  TODO
atmel_avr/: .gitignore  ARDUINO_README.md  PINOUTS_ARDUINO_TO_AVR  PINOUTS_ATMEL_AVR  README_ARDUINO.md  TODO  TODO.md  blink_led_arduino_D13
atmel_mega_avr/: analog_to_digital_converter  blink_led_PB5  digital_input
awk/: README.md  cut.sh  print.sh  regex.sh  (+5 more)
boost_python/build_with_cmake/: CMakeLists.txt  README  func.h
cmake/test/: CMakeLists.txt
cmake/test/src/: CMakeLists.txt
cmake/test/src/mains/: CMakeLists.txt  main1.cpp  main2.cpp
cmake/test/src/tools/: CMakeLists.txt  tools1.cpp  tools1.h  tools2.cpp  tools2.h
cpp/bullet/build_with_cmake/: CMakeLists.txt
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/: .gitignore  CMakeLists.txt  COPYING  Doxyfile  Makefile  README  TODO  botsim.cc  box.cc  bullet_environment.cc  bullet_environment.h  ground.cc  osg_environment.cc  osg_environment.h  part.cc  part.h  simulator.cc  tools.cc  tools.h  uml.xmi
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/doc/: components_sets.dot
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/: CMakeLists.txt
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/actuators/: CMakeLists.txt  motor.cc  motor.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/builtin_objects/: CMakeLists.txt  robudog_jd.cc  robudog_jd.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/builtin_parts/: CMakeLists.txt  dynamixel_ax12.cc  dynamixel_ax12.h  robudog_trunk.cc  robudog_trunk.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/controllers/: CMakeLists.txt  constant_signal.cc  constant_signal.h  robudog_controller.cc  robudog_controller.h  sinusoidal_signal.cc  sinusoidal_signal.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/core/: CMakeLists.txt  actuator.cc  actuator.h  bullet_environment.cc  bullet_environment.h  controller.cc  controller.h  joint.cc  joint.h  joint_slot.cc  joint_slot.h  object.cc  object.h  osg_environment.cc  osg_environment.h  part.cc  part.h  sensor.cc  sensor.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/joint_slots/: CMakeLists.txt  fixed_slot.cc  fixed_slot.h  hinge_slot.cc  hinge_slot.h  point_to_point_slot.cc  point_to_point_slot.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/joints/: CMakeLists.txt  fixed.cc  fixed.h  hinge.cc  hinge.h  point_to_point.cc  point_to_point.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/parts/: CMakeLists.txt  box.cc  box.h  ground.cc  ground.h  sphere.cc  sphere.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/scenes/: CMakeLists.txt  cubes_1.cc  demo.cc  falling_sphere.cc  pendulum.cc  pendulum_hinge.cc  pendulum_motor.cc  pendulum_point_to_point.cc  robudog_jd.cc
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/sensors/: CMakeLists.txt  clock.cc  clock.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/simulators/: CMakeLists.txt
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/src/tools/: CMakeLists.txt  common_options_parser.cc  common_options_parser.h  logger_ticks_parts_dat.cc  logger_ticks_parts_dat.h  logger_ticks_parts_json.cc  logger_ticks_parts_json.h  logger_time_steps_bullet_environment_dat.cc  logger_time_steps_bullet_environment_dat.h  logger_time_steps_bullet_environment_json.cc  logger_time_steps_bullet_environment_json.h  logger_time_steps_parts_dat.cc  logger_time_steps_parts_dat.h  logger_time_steps_parts_json.cc  logger_time_steps_parts_json.h  part_logger_dat.cc  part_logger_dat.h  tools.cc  tools.h
cpp/bullet_osg/BULLET_OSG_FRAMEWORK/utils/: img_to_video_with_libav.sh  plot_part_dat.py  plot_part_json.py
cpp/osg/build_with_cmake/: CMakeLists.txt  hello.cc
cpp/qt/qt4/build_with_cmake/: CMakeLists.txt
cpp/qt5/build_with_cmake/: CMakeLists.txt
python/fastapi/fastapi_with_sqlmodel/: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  requirements-build.txt
python/fastapi/fastapi_with_sqlmodel/ansible_playbooks/: README.md  ansible_playbook.yml  ansible_playbook_app.yml  ansible_playbook_traefik.yml
python/fastapi/fastapi_with_sqlmodel/ansible_playbooks/files/heroes-config/: config.yml
python/fastapi/fastapi_with_sqlmodel/app/: main.py
python/fastapi/fastapi_with_sqlmodel/client/: create_heroes.py  delete_hero.py  get_heroes.py  read_hero.py  requirements.txt  update_hero.py
python/fastapi/fastapi_with_sqlmodel/docker/: docker-compose-app.override.yml  docker-compose-app.yml  docker-compose-traefik.yml  docker-compose-traefik.yml.j2  fastapi.dockerfile  gradio.dockerfile
python/fastapi/fastapi_with_sqlmodel/frontend/: create.html  index.html
python/fastapi/fastapi_with_sqlmodel/nginx-static-html-directory/: index.html
python/fastapi/fastapi_with_sqlmodel/src/: .dockerignore  AUTHORS  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.txt
python/fastapi/fastapi_with_sqlmodel/src/heroes/: main.py
python/fastapi/sql_sqlalchemy_03_timeseries_docker-compose_ansible_traefik_https_dashboard_basic-auth/backend/: pyproject.toml  requirements-build.txt
python/fastapi/sql_sqlalchemy_03_timeseries_docker-compose_ansible_traefik_https_dashboard_basic-auth/backend/client_examples/: get_values_v2.py  get_values_v3.py  get_values_v4.py
python/fastapi/sql_sqlalchemy_03_timeseries_docker-compose_ansible_traefik_https_dashboard_basic-auth/backend/hello/: database.py  models.py
qt4_cpp/build_with_cmake/: CMakeLists.txt  hello.cc
science/optimization_framework_cpp/: CMakeLists.txt
science/optimization_framework_cpp/src/: CMakeLists.txt
science/optimization_framework_cpp/src/main/: CMakeLists.txt  test1.cpp
science/optimization_framework_cpp/src/objective_function/: CMakeLists.txt  objective_function.cpp  objective_function.h  sphere_function.cpp  sphere_function.h
science/optimization_framework_cpp/src/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.h  optimizer_gradient_descent.cpp  optimizer_gradient_descent.h  optimizer_naive.cpp  optimizer_naive.h
science/optimization_framework_cpp/src/tools/: CMakeLists.txt  utils.cpp  utils.h
(+3423 files in other folders)
