INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tools)

### OPTIONS ###

OPTION(BUILD_MAIN1 "Build main1" ON)
OPTION(BUILD_MAIN2 "Build main2" ON)

### ADD_EXECUTABLE ###

IF(BUILD_MAIN1)
    ADD_EXECUTABLE(main1 main1.cpp)
ENDIF(BUILD_MAIN1)

IF(BUILD_MAIN2)
    ADD_EXECUTABLE(main2 main2.cpp)
ENDIF(BUILD_MAIN2)

### TARGET_LINK_LIBRAIRIES ###

IF(BUILD_MAIN1)
    TARGET_LINK_LIBRARIES(main1 tools)
ENDIF(BUILD_MAIN1)

IF(BUILD_MAIN2)
    TARGET_LINK_LIBRARIES(main2 tools)
ENDIF(BUILD_MAIN2)

